Initial REST integration test
git-svn-id: https://svn.apache.org/repos/asf/cxf/fediz/trunk@1564939 13f79535-47bb-0310-9956-ffa450edef68